# learnyouahaskell

./: .gitignore  MonadCheck.hs  README.md  ReaderMonadTutorial.hs  ScratchPad.hs  ScratchPad2.hs  ScratchPad3.hs  ScratchPad4.hs  higher-order-functions.md  recursion.md  resources.md  starting-out.md  syntax-in-functions.md  types-and-typeclasses.md
48HourScheme/: .stage1  48HourScheme.cabal  CHANGELOG.md  LICENSE  Main.hi  Main.hs
48HourScheme/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ActualCsv/: .ghc.environment.x86_64-linux-8.10.7  ActualCsv.cabal  CHANGELOG.md
ActualCsv/app/: Main.hs
Algos/: bst.hs
Calculator/: Calc.hs
CodeWars/: ASCII.hs  AlphaToAlphaPosition.hs  AlphaWar.hs  AlternateCap.hs  Anagrams.hs  AreTheyTheSame.hs  ArrayDiff.hs  BanjoPlayer.hs  BasicB.hs  BitCounting.hs  BouncingBalls.hs  BreakCamelCase.hs  BuildTower.hs  CalculatingWithFunctions.hs  CategorizeNewMember.hs  Collatz.hs  ColouredTriangles.hs  CompDNA.hs  ConcatMeLikeaFold.hs  ConsecutiveStrings.hs  CountByx.hs  CountDigits.hs  CountingDuplicates.hs  CountingSmileys.hs  CreditCardMask.hs  DataCompressionRunLength.hs  DigitalRoot.hs  Disarium.hs  DisemvowelTrolls.hs  DoubleChar.hs  EqualSidesArray.hs  Factorial.hs  FindOdd.hs  FindTheCapitals.hs  FindTheParityOutlier.hs  FixCasing.hs  Grasshopper.hs  GravityFlip.hs  GrowthOfPopulation.hs  HelpBookseller.hs  (+57 more)
FunctionalProgrammingInHaskell/: README.md  TypesAndClasses.hs
GetProgrammingWithHaskell/: ProgrammingWithHaskell.hs  README.md
Hackerrank/: ArrayOfNElements.hs  ArrayRotation.hs  ArraySum.hs  BirthdayCakeCandles.hs  BreakingTheRecords.hs  DiagonalDifference.hs  DrawingBook.hs  FilterArray.hs  FilterPositionsList.hs  Grading.hs  HelloWorldnTimes.hs  ListLength.hs  ListReplication.hs  PalindromeIndex.hs  PlusMinus.hs  PowerSum.hs  SockMerchant.hs  Staircase.hs  SumOfOddElements.hs  UpdateList.hs  VeryBigSum.hs
HaskelProblems99/: Problems.hs
HaskellBook/: Strings.hs
LeetCode/: MergeTwoSortedLists.hs  PalindromeNumber.hs  RomanToInteger.hs  TwoSum.hs
Mongolia/: AbstractTreeSyntax.hs  BinaryTrees.hs  Catamorphisms.hs  DataTypesAndFunctions.hs  FoldlAndFoldr.hs  FunctionalProgrammingWithIO.hs  FunctorsAndApplicatives.hs  HigherOrderFunctions.hs  HigherOrderFunctions2.hs  InputOutput.hs  Lists.hs  LookupTables.hs  MonadClass.hs  Overloading.hs  Overview.hs  PolyAndTypeClasses.hs  README.md  Reader.hs  ReaderMonad.hs  TreeMergeSort.hs
Mongolia/AbstractionPatterns/: .ghc.environment.x86_64-linux-8.6.5  AbstractionPatterns.cabal  AbstractionPatterns.hs  CHANGELOG.md
Mongolia/AbstractionPatterns/dist-newstyle/cache/: compiler  config
MultiZipper/: CHANGELOG.md  MultiZipper.cabal
MultiZipper/app/: Main.hs
MultiZipper/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
MutliZipper/: CHANGELOG.md  MutliZipper.cabal
MutliZipper/app/: Main.hs
MutliZipper/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
NumberGuesser/: Main.hs
PL/: CommonMonads.hs  CustomTypes.hs  Functions.hs  HigherOrderFunctions.hs  IO.hs  ModulesPC.hs  MonadicFunctions.hs  Monads.hs  StandardCollections.hs  TypeClasses.hs  Types.hs
PL/CabalSandbox/: cabal.sandbox.config
PL/CabalTest/scotty-test/: scotty-test.cabal
PL/CabalTest/scotty-test/src/: Greeting.hs  Main.hs
PersistentTest/: CHANGELOG.md  PersistentTest.cabal
PersonApi/PersonApi/: .gitignore  README.md  package.yaml
PersonApi/PersonApi/app/: DevelMain.hs  devel.hs
PersonApi/PersonApi/config/: keter.yml  settings.yml  test-settings.yml
RWH/CH3/: BookStore.hs
Random/: DoNotion.hs  PhoneBook.hs  StringContains.hs  bst.hs
TonysBlog/: TonysBlog.hs
Transformers/: MonadTransformers.hs
challenges/: CHANGELOG.md  Calc.hs  Main.hs  MathTest.hs  challenges.cabal  tests.hs
csv-parser/: csv-parser.cabal
csv-parser/app/: Main.hs
csv-parser/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
exercism/haskell/acronym/: acronym.cabal  package.yaml
exercism/haskell/rna-transcription/: package.yaml  rna-transcription.cabal
halogen-project/: package.json  spago.dhall
halogen-project/src/: Main.purs
monads/: LICENSE  monads.cabal
monads/app/: Main.hs  fun.hs
pgtest/: CHANGELOG.md  pgtest.cabal
project-euler/: 1-10.hs
servant-tutorial/: servant-tutorial.cabal
servant-tutorial/app/: Lib.hs  Main.hs  Tutorial.hs
test/: test.cabal
todo-app/: .gitignore  README.md  package.yaml
todo-app/app/: DevelMain.hs  devel.hs
todo-app/backend/todo-api/: todo-api.cabal
todo-app/config/: keter.yml  settings.yml  test-settings.yml
todo-app/dbtest/: CHANGELOG.md  dbtest.cabal
todo-app/dbtest/app/: Main.hs
todo-app/frontend/todo.app/: README.md  angular.json  package-lock.json  package.json
video-tutorial/: README.md
(+44 files in other folders)
