cabal-version:      3.0
name:               MultiZipper
version:            0.1.0.0
author:             Philg112
maintainer:         Philg112

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable MultiZipper
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, containers, text
    hs-source-dirs:   app
    default-language: Haskell2010
