cabal-version:      2.4
name:               servant-tutorial
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             philg112
maintainer:         phil.grujovski@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable servant-tutorial
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    App

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.14.3.0
                  , text
                  , time
                  , servant
                  , string-conversions
                  , aeson
                  , attoparsec
                  , base-compat
                  , bytestring
                  , containers
                  , directory
                  , http-api-data
                  , http-client
                  , http-media
                  , http-types
                  , mtl
                  , string-conversions
                  , text
                  , transformers
                  , wai
                  , warp

    build-depends:  servant
                , servant-server
                , servant-client
                , servant-docs


    build-depends:  blaze-html   >= 0.9.0.1 && < 0.10
                , blaze-markup >= 0.8.0.0 && < 0.9
                , cookie       >= 0.4.3   && < 0.5
                , js-jquery    >= 3.3.1   && < 3.4
                , lucid        >= 2.9.11  && < 2.12
                , random       >= 1.1     && < 1.3
                , servant-js   >= 0.9     && < 0.10
                , time         >= 1.6.0.1 && < 1.13

    hs-source-dirs:   app
    default-language: Haskell2010
